# l3-logically

./: .gitignore  README.md  _CoqProject  l3-logic.opam
theories/: heapprop.v  hwp.v  lang.v  loclit.v
